[package]
name = "musicgpt"
license = "MIT"
version = "0.1.15"
edition = "2021"
description = "Generate music samples from natural language locally with your own computer"
keywords = ["llm", "music", "audio", "ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.59", features = ["vendored"] } # NOTE: neeeded for cross compilations
clap = { version = "4.5.4", features = ["derive"] }
tokenizers = "0.19.1"
ndarray = "0.15.6"
num-traits = "0.2.18"
log = "0.4.21"
rand = "0.8.5"
hound = "3.5.1"
tokio = { version = "1.37.0", features = ["full"] }
indicatif = "0.17.8"
directories = "5.0"
reqwest = { version = "0.12.4", features = ["stream"] }
futures-util = "0.3.30"
serde = "1.0.200"
serde_json = "1.0.116"
cpal = "0.15.3"

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.2", features = ["cuda", "tensorrt"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.2", features = ["coreml"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.2", features = ["cuda", "tensorrt"] }
