[package]
name = "musicgpt"
license = "MIT"
version = "0.1.31"
edition = "2021"
description = "Generate music samples from natural language prompt locally with your own computer"
keywords = ["llm", "music", "audio", "ai"]

[dependencies]
openssl = { version = "0.10.59", features = ["vendored"] } # NOTE: neeeded for cross compilations
clap = { version = "4.5.4", features = ["derive"] }
tokenizers = "0.19.1"
ndarray = "0.15.6"
num-traits = "0.2.18"
log = "0.4.21"
rand = "0.8.5"
hound = "3.5.1"
tokio = { version = "1.37.0", features = ["full"] }
indicatif = "0.17.8"
directories = "5.0"
reqwest = { version = "0.12.4", features = ["stream"] }
futures-util = "0.3.30"
serde = "1.0.200"
serde_json = "1.0.116"
cpal = "0.15.3"
ort = { version = "2.0.0-rc.2" , features = ["half"]}
half = { version = "2.4.1", features = ["num-traits"] }
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter", "fmt" ] }

[features]
default = []
coreml = ["ort/coreml"]
tensorrt = ["ort/tensorrt"]
cuda = ["ort/cuda"]

