[package]
name = "musicgpt"
license = "MIT"
version = "0.1.34"
edition = "2021"
description = "Generate music samples from natural language prompt locally with your own computer"
keywords = ["llm", "music", "audio", "ai"]

[dependencies]
openssl = { version = "0.10.59", features = ["vendored"] } # NOTE: neeeded for cross compilations
clap = { version = "4.5.4", features = ["derive"] }
tokenizers = "0.19.1"
ndarray = "0.15.6"
num-traits = "0.2.18"
log = "0.4.21"
rand = "0.8.5"
hound = "3.5.1"
tokio = { version = "1.37.0", features = ["full"] }
indicatif = "0.17.8"
directories = "5.0"
reqwest = { version = "0.12.4", features = ["stream"] }
futures-util = "0.3.30"
serde = { version = "1.0.200" }
serde_json = "1.0.116"
cpal = "0.15.3"
ort = { version = "2.0.0-rc.2", features = ["half"] }
half = { version = "2.4.1", features = ["num-traits"] }
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
async-trait = "0.1.80"
anyhow = "1.0.83"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
text_io = "0.1.12"
regex = "1.10.4"
async-stream = "0.3.5"

# Web UI deps, potentially hide behind a flag
tokio-tungstenite = "0.21.0"
specta = { version = "1.0.5", features = ["uuid", "serde", "typescript", "export"] }
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2" , features = ["fs"]}
open = "5.1.2"
chrono = "0.4.38"
scopeguard = "1.2.0"

[features]
default = []
coreml = ["ort/coreml"]
tensorrt = ["ort/tensorrt"]
cuda = ["ort/cuda"]

